kubernetes/cert-manager/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # cert-manager.io/duration: 24h
    # cert-manager.io/renew-before: 3h
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: nginx-staging.syncsoul.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-1
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - nginx-staging.syncsoul.org
    secretName: nginx-1-cert-24h
